--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,23 @@
 article {
     margin: 5px 0 5px 0;
+    width: 500px;
+    background-color: blanchedalmond;
 }
 
 .false {
-border: 1px solid green;
+    border: 1px solid green;
 }
 
 .true {
-border: 1px dashed red;
+    border: 1px dashed red;
+}
+
+#display-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+body {
+    background-color: aliceblue;
 }
